test/stg/error/topLevel.stg
badArgs = FUN(x y -> y);
badArgs = FUN(x y -> y);
